--- a/game/game/game.vcxproj
+++ b/game/game/game.vcxproj
@@ -156,6 +156,9 @@
     <ClInclude Include="Global.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="тз.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
