--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -45,4 +45,7 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="тз.txt" />
+  </ItemGroup>
 </Project>
