--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -45,10 +45,13 @@
     <ClCompile Include="Movable.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="CanBeHit.cpp">
+    <ClCompile Include="BulletManager.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="BulletManager.cpp">
+    <ClCompile Include="ExposedToBullets.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="WaveOfEnemies.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
@@ -80,10 +83,13 @@
     <ClInclude Include="Movable.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="CanBeHit.h">
+    <ClInclude Include="BulletManager.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="BulletManager.h">
+    <ClInclude Include="ExposedToBullets.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="WaveOfEnemies.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
