--- a/game/game/game.vcxproj
+++ b/game/game/game.vcxproj
@@ -146,7 +146,7 @@
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="BulletManager.cpp" />
-    <ClCompile Include="CanBeHit.cpp" />
+    <ClCompile Include="ExposedToBullets.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -155,12 +155,13 @@
     <ClCompile Include="Movable.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="WaveOfEnemies.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="BulletManager.h" />
-    <ClInclude Include="CanBeHit.h" />
+    <ClInclude Include="ExposedToBullets.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Movable.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="WaveOfEnemies.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
